--- a/src/blocks/_fonts.html
+++ b/src/blocks/_fonts.html
@@ -1,5 +1,4 @@
-<link rel="preload" href="fonts/Circe-Bold.woff2" as="font" crossorigin/>
-<link rel="preload" href="fonts/Circe-ExtraBold.woff2" as="font" crossorigin/>
-<link rel="preload" href="fonts/Circe-Light.woff2" as="font" crossorigin/>
-<link rel="preload" href="fonts/Circe-Regular.woff2" as="font" crossorigin/>
-<link rel="preload" href="fonts/PlayfairDisplay-BoldItalic.woff2" as="font" crossorigin/>
+	<!-- Fonts preload -->
+	<link rel="preload" href="fonts/IntroBold.woff2" as="font" crossorigin/>
+	<link rel="preload" href="fonts/IntroBook.woff2" as="font" crossorigin/>
+	<link rel="preload" href="fonts/IntroRegular.woff2" as="font" crossorigin/>
