--- a/src/index.html
+++ b/src/index.html
@@ -330,7 +330,7 @@
 								</picture>
 							</div>
 							<label class="custom-checkbox">
-								<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
+								<input data-check class="custom-checkbox__input" type="checkbox" name="тип">
 								<span class="custom-checkbox__text" tabindex="0">кеды</span>
 							</label>
 						</div>
@@ -342,7 +342,43 @@
 								</picture>
 							</div>
 							<label class="custom-checkbox">
-								<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
+								<input data-check class="custom-checkbox__input" type="checkbox" name="тип">
+								<span class="custom-checkbox__text" tabindex="0">кроссовки</span>
+							</label>
+						</div>
+						<div class="quiz-block__item">
+							<div class="quiz-block__img">
+								<picture>
+									<source srcset="img/quiz_1.webp" type="image/webp">
+									<img src="img/quiz_1.jpg" loading="lazy" alt="кроссовок">
+								</picture>
+							</div>
+							<label class="custom-checkbox">
+								<input data-check class="custom-checkbox__input" type="checkbox" name="тип">
+								<span class="custom-checkbox__text" tabindex="0">туфли</span>
+							</label>
+						</div>
+						<div class="quiz-block__item">
+							<div class="quiz-block__img">
+								<picture>
+									<source srcset="img/quiz_1.webp" type="image/webp">
+									<img src="img/quiz_1.jpg" loading="lazy" alt="кроссовок">
+								</picture>
+							</div>
+							<label class="custom-checkbox">
+								<input data-check class="custom-checkbox__input" type="checkbox" name="тип"> 
+								<span class="custom-checkbox__text" tabindex="0">слипоны</span>
+							</label>
+						</div>
+						<div class="quiz-block__item">
+							<div class="quiz-block__img">
+								<picture>
+									<source srcset="img/quiz_1.webp" type="image/webp">
+									<img src="img/quiz_1.jpg" loading="lazy" alt="кроссовок">
+								</picture>
+							</div>
+							<label class="custom-checkbox">
+								<input data-check class="custom-checkbox__input" type="checkbox" name="тип">
 								<span class="custom-checkbox__text" tabindex="0">кеды</span>
 							</label>
 						</div>
@@ -354,50 +390,14 @@
 								</picture>
 							</div>
 							<label class="custom-checkbox">
-								<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
-								<span class="custom-checkbox__text" tabindex="0">кеды</span>
-							</label>
-						</div>
-						<div class="quiz-block__item">
-							<div class="quiz-block__img">
-								<picture>
-									<source srcset="img/quiz_1.webp" type="image/webp">
-									<img src="img/quiz_1.jpg" loading="lazy" alt="кроссовок">
-								</picture>
-							</div>
-							<label class="custom-checkbox">
-								<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
-								<span class="custom-checkbox__text" tabindex="0">кеды</span>
-							</label>
-						</div>
-						<div class="quiz-block__item">
-							<div class="quiz-block__img">
-								<picture>
-									<source srcset="img/quiz_1.webp" type="image/webp">
-									<img src="img/quiz_1.jpg" loading="lazy" alt="кроссовок">
-								</picture>
-							</div>
-							<label class="custom-checkbox">
-								<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
-								<span class="custom-checkbox__text" tabindex="0">кеды</span>
-							</label>
-						</div>
-						<div class="quiz-block__item">
-							<div class="quiz-block__img">
-								<picture>
-									<source srcset="img/quiz_1.webp" type="image/webp">
-									<img src="img/quiz_1.jpg" loading="lazy" alt="кроссовок">
-								</picture>
-							</div>
-							<label class="custom-checkbox">
-								<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
+								<input data-check class="custom-checkbox__input" type="checkbox" name="тип">
 								<span class="custom-checkbox__text" tabindex="0">кеды</span>
 							</label>
 						</div>
 					</div>
 					<div class="quiz-block__footer">
 						<span class="quiz-block__number">1 из 3</span>
-						<button class=" quiz-block__btn btn-reset" data-next>Следующий шаг</button>
+						<button class="quiz-block__btn btn-reset" data-next>Следующий шаг</button>
 					</div>
 				</div>
 				<div class="quiz-block">
@@ -410,23 +410,23 @@
 					<h3 class="quiz-block__subtitle subtitle">Какой размер вам подойдет?</h3>
 					<div class="quiz-block__checkboxes">
 						<label class="custom-checkbox">
-							<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
+							<input data-check class="custom-checkbox__input" type="radio" name="size">
 							<span class="custom-checkbox__text" tabindex="0">менее 36</span>
 						</label>
 						<label class="custom-checkbox">
-							<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
+							<input data-check class="custom-checkbox__input" type="radio" name="size">
 							<span class="custom-checkbox__text" tabindex="0">36-38</span>
 						</label>
 						<label class="custom-checkbox">
-							<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
+							<input data-check class="custom-checkbox__input" type="radio" name="size">
 							<span class="custom-checkbox__text" tabindex="0">39-41</span>
 						</label>
 						<label class="custom-checkbox">
-							<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
+							<input data-check class="custom-checkbox__input" type="radio" name="size">
 							<span class="custom-checkbox__text" tabindex="0">42-44</span>
 						</label>
 						<label class="custom-checkbox">
-							<input data-check class="custom-checkbox__input" type="radio" name="checkbox-quiz">
+							<input data-check class="custom-checkbox__input" type="radio" name="size">
 							<span class="custom-checkbox__text" tabindex="0">45 и больше</span>
 						</label>
 					</div>
@@ -449,7 +449,7 @@
 						Ответьте на три вопроса и мы вышлем каталог с самыми подходящими для вас моделями 
 					</span>
 					<h3 class="quiz-block__subtitle subtitle">Уточните какие-либо моменты</h3>
-					<textarea id="text" name="text" placeholder="Введите сообщение" autocomplete="off" class="quiz-block__message"></textarea>
+					<textarea name="text" placeholder="Введите сообщение" autocomplete="off" class="quiz-block__message"></textarea>
 					<div class="quiz-block__footer">
 						<span class="quiz-block__number">3 из 3</span>
 						<button class=" quiz-block__btn btn-reset" data-next>Следующий шаг</button>
