--- a/src/index.html
+++ b/src/index.html
@@ -120,167 +120,7 @@
 									<img src="img/image.jpg" loading="lazy" alt="">
 								</picture>
 								<div class="catalog-item__btns">
-									<button class="catalog-item__btn btn-reset popup-btn" aria-label="Показать информацию о товаре">
-										<svg><use xlink:href="img/sprite.svg#show"></use></svg>
-									</button>
-									<button class="catalog-item__btn btn-reset" aria-label="Добавить товар в корзину">
-										<svg><use xlink:href="img/sprite.svg#cart"></use></svg>
-									</button>
-								</div>
-							</div>
-							<h3 class="catalog-item__title">
-								Кроссовки Nike Air Force 1 '07 QS
-							</h3>
-							<span class="catalog-item__price">11 000 р</span>
-						</article>
-						<article class="catalog-item">
-							<div class="catalog-item__img">
-								<picture>
-									<source srcset="img/image.webp" type="image/webp">
-									<img src="img/image.jpg" loading="lazy" alt="">
-								</picture>
-								<div class="catalog-item__btns">
-									<button class="catalog-item__btn btn-reset" aria-label="Показать информацию о товаре">
-										<svg><use xlink:href="img/sprite.svg#show"></use></svg>
-									</button>
-									<button class="catalog-item__btn btn-reset" aria-label="Добавить товар в корзину">
-										<svg><use xlink:href="img/sprite.svg#cart"></use></svg>
-									</button>
-								</div>
-							</div>
-							<h3 class="catalog-item__title">
-								Кроссовки Nike Air Force 1 '07 QS
-							</h3>
-							<span class="catalog-item__price">11 000 р</span>
-						</article>
-						<article class="catalog-item">
-							<div class="catalog-item__img">
-								<picture>
-									<source srcset="img/image.webp" type="image/webp">
-									<img src="img/image.jpg" loading="lazy" alt="">
-								</picture>
-								<div class="catalog-item__btns">
-									<button class="catalog-item__btn btn-reset" aria-label="Показать информацию о товаре">
-										<svg><use xlink:href="img/sprite.svg#show"></use></svg>
-									</button>
-									<button class="catalog-item__btn btn-reset" aria-label="Добавить товар в корзину">
-										<svg><use xlink:href="img/sprite.svg#cart"></use></svg>
-									</button>
-								</div>
-							</div>
-							<h3 class="catalog-item__title">
-								Кроссовки Nike Air Force 1 '07 QS
-							</h3>
-							<span class="catalog-item__price">11 000 р</span>
-						</article>
-						<article class="catalog-item">
-							<div class="catalog-item__img">
-								<picture>
-									<source srcset="img/image.webp" type="image/webp">
-									<img src="img/image.jpg" loading="lazy" alt="">
-								</picture>
-								<div class="catalog-item__btns">
-									<button class="catalog-item__btn btn-reset" aria-label="Показать информацию о товаре">
-										<svg><use xlink:href="img/sprite.svg#show"></use></svg>
-									</button>
-									<button class="catalog-item__btn btn-reset" aria-label="Добавить товар в корзину">
-										<svg><use xlink:href="img/sprite.svg#cart"></use></svg>
-									</button>
-								</div>
-							</div>
-							<h3 class="catalog-item__title">
-								Кроссовки Nike Air Force 1 '07 QS
-							</h3>
-							<span class="catalog-item__price">11 000 р</span>
-						</article>
-						<article class="catalog-item">
-							<div class="catalog-item__img">
-								<picture>
-									<source srcset="img/image.webp" type="image/webp">
-									<img src="img/image.jpg" loading="lazy" alt="">
-								</picture>
-								<div class="catalog-item__btns">
-									<button class="catalog-item__btn btn-reset" aria-label="Показать информацию о товаре">
-										<svg><use xlink:href="img/sprite.svg#show"></use></svg>
-									</button>
-									<button class="catalog-item__btn btn-reset" aria-label="Добавить товар в корзину">
-										<svg><use xlink:href="img/sprite.svg#cart"></use></svg>
-									</button>
-								</div>
-							</div>
-							<h3 class="catalog-item__title">
-								Кроссовки Nike Air Force 1 '07 QS
-							</h3>
-							<span class="catalog-item__price">11 000 р</span>
-						</article>
-						<article class="catalog-item">
-							<div class="catalog-item__img">
-								<picture>
-									<source srcset="img/image.webp" type="image/webp">
-									<img src="img/image.jpg" loading="lazy" alt="">
-								</picture>
-								<div class="catalog-item__btns">
-									<button class="catalog-item__btn btn-reset" aria-label="Показать информацию о товаре">
-										<svg><use xlink:href="img/sprite.svg#show"></use></svg>
-									</button>
-									<button class="catalog-item__btn btn-reset" aria-label="Добавить товар в корзину">
-										<svg><use xlink:href="img/sprite.svg#cart"></use></svg>
-									</button>
-								</div>
-							</div>
-							<h3 class="catalog-item__title">
-								Кроссовки Nike Air Force 1 '07 QS
-							</h3>
-							<span class="catalog-item__price">11 000 р</span>
-						</article>
-						<article class="catalog-item">
-							<div class="catalog-item__img">
-								<picture>
-									<source srcset="img/image.webp" type="image/webp">
-									<img src="img/image.jpg" loading="lazy" alt="">
-								</picture>
-								<div class="catalog-item__btns">
-									<button class="catalog-item__btn btn-reset" aria-label="Показать информацию о товаре">
-										<svg><use xlink:href="img/sprite.svg#show"></use></svg>
-									</button>
-									<button class="catalog-item__btn btn-reset" aria-label="Добавить товар в корзину">
-										<svg><use xlink:href="img/sprite.svg#cart"></use></svg>
-									</button>
-								</div>
-							</div>
-							<h3 class="catalog-item__title">
-								Кроссовки Nike Air Force 1 '07 QS
-							</h3>
-							<span class="catalog-item__price">11 000 р</span>
-						</article>
-						<article class="catalog-item">
-							<div class="catalog-item__img">
-								<picture>
-									<source srcset="img/image.webp" type="image/webp">
-									<img src="img/image.jpg" loading="lazy" alt="">
-								</picture>
-								<div class="catalog-item__btns">
-									<button class="catalog-item__btn btn-reset" aria-label="Показать информацию о товаре">
-										<svg><use xlink:href="img/sprite.svg#show"></use></svg>
-									</button>
-									<button class="catalog-item__btn btn-reset" aria-label="Добавить товар в корзину">
-										<svg><use xlink:href="img/sprite.svg#cart"></use></svg>
-									</button>
-								</div>
-							</div>
-							<h3 class="catalog-item__title">
-								Кроссовки Nike Air Force 1 '07 QS
-							</h3>
-							<span class="catalog-item__price">11 000 р</span>
-						</article>
-						<article class="catalog-item">
-							<div class="catalog-item__img">
-								<picture>
-									<source srcset="img/image.webp" type="image/webp">
-									<img src="img/image.jpg" loading="lazy" alt="">
-								</picture>
-								<div class="catalog-item__btns">
-									<button class="catalog-item__btn btn-reset" aria-label="Показать информацию о товаре">
+									<button class="catalog-item__btn btn-reset modal-btn" aria-label="Показать информацию о товаре">
 										<svg><use xlink:href="img/sprite.svg#show"></use></svg>
 									</button>
 									<button class="catalog-item__btn btn-reset" aria-label="Добавить товар в корзину">
@@ -296,8 +136,7 @@
 					</div>
 					<button class="catalog__more btn btn-reset">Показать еще</button>
 				</div>
-			</div>
-			
+			</div>	
 		</div>
 	</section>
 	<section class="about">
@@ -645,24 +484,10 @@
 		</div>
 	</footer>
 
-	<!-- <div class="popup" tabindex="-1" data-modal>
-		<div class="popup__wrapper">
-			<button class="popup__close btn-reset" aria-label="закрыть окно">&times;</button>
-			<div class="popup__content" role="dialog">
-				Моё окно
-				Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.
-				<button class="two">Нажми на меня</button>
-				<input type="text" placeholder="Имя" class="tab-last">
-			</div>
-		</div>
-	</div> -->
-	<div class="popup" tabindex="-1" data-modal>
-		<div class="popup__content" role="dialog">
-			<button class="popup__close btn-reset" aria-label="закрыть окно">&times;</button>
-			Моё окно
-			Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.
-
-			<button class="two">Нажми на меня</button>
+	<div class="overlay" tabindex="-1">
+		<div class="modal-name" role="dialog" data-modal>
+			<button class="modal-name__close btn-reset" aria-label="закрыть окно">&times;</button>
+			<!-- контент окна -->
 			<input type="text" placeholder="Имя" class="tab-last">
 		</div>
 	</div>
