--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
 				</div>
 				<div class="catalog__products">
 					<div class="catalog__wrap">
-						<article class="catalog-item">
+						<!-- <article class="catalog-item">
 							<div class="catalog-item__img">
 								<picture>
 									<source srcset="img/image.webp" type="image/webp">
@@ -132,7 +132,7 @@
 								Кроссовки Nike Air Force 1 '07 QS
 							</h3>
 							<span class="catalog-item__price">11 000 р</span>
-						</article>
+						</article> -->
 					</div>
 					<button class="catalog__more btn btn-reset">Показать еще</button>
 				</div>
@@ -515,12 +515,6 @@
 							</div>
 						</div>
 					</div>
-					<div class="modal-descr">
-						<h3 class="modal-descr__title">Описание</h3>
-						<div class="modal-descr__text">
-							Кроссовки Nike Blazer Mid '77 Vintage Suede с винтажной подошвой возрождают стиль баскетбольных моделей Nike прошлого, создавая впечатление, что они хранились в шкафу долгие годы. 
-						</div>
-					</div>
 				</div>
 				<div class="modal-info">
 					<div class="modal-info__top">
@@ -565,21 +559,29 @@
 						<li class="modal-info__note-item">Оплата заказа при получении</li>
 						<li class="modal-info__note-item">Обмен в течении двух недель</li>
 					</ul>
-					<div class="modal-property">
-						<h3 class="modal-property__title">Характеристики</h3>
-						<div class="modal-property__chars">
-							<p class="modal-property__item">Пол: Мужской</p>
-							<p class="modal-property__item">Цвета: Разноцветный</p>
-							<p class="modal-property__item">Состав: Кожа, текстиль, резина</p>
-							<p class="modal-property__item">Страна: Вьетнам</p>
+				</div>
+				<div class="modal-property">
+					<div class="modal-descr">
+						<h3 class="modal-descr__title">Описание</h3>
+						<div class="modal-descr__text">
+							Кроссовки Nike Blazer Mid '77 Vintage Suede с винтажной подошвой возрождают стиль баскетбольных моделей Nike прошлого, создавая впечатление, что они хранились в шкафу долгие годы. 
+						</div>
+					</div>
+					<div class="modal-char">
+						<h3 class="modal-char__title">Характеристики</h3>
+						<div class="modal-char__items">
+							<p class="modal-char__item">Пол: Мужской</p>
+							<p class="modal-char__item">Цвета: Разноцветный</p>
+							<p class="modal-char__item">Состав: Кожа, текстиль, резина</p>
+							<p class="modal-char__item">Страна: Вьетнам</p>
 						</div>
 					</div>
 				</div>
-				<!-- <div class="modal-video">
+				<div class="modal-video">
 					<iframe src="https://www.youtube.com/embed/HGiDY4NuTaM"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen></iframe>
-				</div> -->
+				</div>
 			</div>
 		</div>
 	</div>
