--- a/src/index.html
+++ b/src/index.html
@@ -491,7 +491,7 @@
 				<div class="modal-slider">
 					<div class="slider-main swiper">
 						<div class="slider-main__wrapper swiper-wrapper">
-							<div class="slider-main__item swiper-slide">
+							<!-- <div class="slider-main__item swiper-slide">
 								<img src="img/image.jpg" alt="изображение">
 							</div>
 							<div class="slider-main__item swiper-slide">
@@ -499,12 +499,12 @@
 							</div>
 							<div class="slider-main__item swiper-slide">
 								<img src="img/image.jpg" alt="изображение">
-							</div>
+							</div> -->
 						</div>
 					</div>
 					<div class="slider-min swiper">
 						<div class="slider-min__wrapper swiper-wrapper">
-							<div class="slider-min__item swiper-slide">
+							<!-- <div class="slider-min__item swiper-slide">
 								<img src="img/image.jpg" alt="изображение">
 							</div>
 							<div class="slider-min__item swiper-slide">
@@ -512,7 +512,7 @@
 							</div>
 							<div class="slider-min__item swiper-slide">
 								<img src="img/image.jpg" alt="изображение">
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
@@ -577,11 +577,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="modal-video">
+				<!-- <div class="modal-video">
 					<iframe src="https://www.youtube.com/embed/HGiDY4NuTaM"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen></iframe>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
