--- a/src/index.html
+++ b/src/index.html
@@ -637,11 +637,11 @@
 					<span class="modal-cart__number">Заказ 3456 67</span>
 				</div>
 				<div class="modal-cart-order">
-					<div class="modal-cart-order__quantity">Товаров в заказе: <span>3 шт</span></div>
-					<div class="modal-cart-order__summ">Общая сумма заказа: <span>25 789 р</span></div>
-					<button class="modal-cart-order__show btn-reset modal-cart-order__show--active">Состав заказа</button>
+					<div class="modal-cart-order__quantity">Товаров в заказе: <span>0 шт</span></div>
+					<div class="modal-cart-order__summ">Общая сумма заказа: <span>0 р</span></div>
+					<button class="modal-cart-order__show btn-reset">Состав заказа</button>
 					<ul class="modal-cart-order__list list-reset">
-						<li class="modal-cart-product">
+						<!-- <li class="modal-cart-product">
 							<div class="modal-cart-product__image">
 								<img src="img/image.jpg" alt="изображение" width="80" height="80">
 							</div>
@@ -650,7 +650,7 @@
 								<span class="modal-cart-product__price">8 678 p</span>
 							</div>
 							<button class="modal-cart-product__delete btn-reset">Удалить</button>
-						</li>
+						</li> -->
 						<!-- <li class="modal-cart-product">
 							<div class="modal-cart-product__image">
 								<img src="img/image.jpg" alt="изображение" width="80" height="80">
