--- a/src/index.html
+++ b/src/index.html
@@ -30,34 +30,14 @@
 							<!-- <li class="menu__item"><a href="#" class="menu__link">Корзина</a></li> -->
 						</ul>
 					</nav>
-					<button class="cart btn-reset cart--inactive">
+					<button class="cart btn-reset" disabled>
 						<svg><use xlink:href="img/sprite.svg#cart"></use></svg>
-						<div class="cart__count">1</div>
+						<div class="cart__count"></div>
 					</button>
 					<div class="mini-cart">
 						<div class="mini-cart__products" data-simplebar>
 							<ul class="mini-cart__list list-reset">
 								<!-- <li class="mini-cart__item mini-cart__item--active">
-									<div class="mini-cart__image">
-										<img src="img/image.jpg" alt="изображение" width="100" height="100">
-									</div>
-									<div class="mini-cart__content">
-										<h3 class="mini-cart__title">Женские кроссовки Puma Force 1 Shadow</h3>
-										<span class="mini-cart__price">8 678 p</span>
-									</div>
-									<button class="mini-cart__delete btn-reset"></button>
-								</li>
-								<li class="mini-cart__item">
-									<div class="mini-cart__image">
-										<img src="img/image.jpg" alt="изображение" width="100" height="100">
-									</div>
-									<div class="mini-cart__content">
-										<h3 class="mini-cart__title">Женские кроссовки Puma Force 1 Shadow</h3>
-										<span class="mini-cart__price">8 678 p</span>
-									</div>
-									<button class="mini-cart__delete btn-reset"></button>
-								</li>
-								<li class="mini-cart__item">
 									<div class="mini-cart__image">
 										<img src="img/image.jpg" alt="изображение" width="100" height="100">
 									</div>
